# ayon-sitesync

./: .gitignore  README.md  __init__.py  create_package.py  mkdocs.yml  models.py  package.py  pyproject.toml  version.py  versions.json
.github/workflows/: deploy_mkdocs.yml
1.2.3/: 404.html  index.html  license.html  objects.inv
1.2.3/autoapi/: summary.html
1.2.3/autoapi/server/: index.html
1.2.3/search/: search_index.js  search_index.json
1.2.6/: 404.html  index.html  license.html
1.2.6/autoapi/: summary.html
1.2.6/autoapi/server/: index.html
1.2.6/search/: search_index.js  search_index.json
1.3.0/: 404.html  index.html  license.html  objects.inv
1.3.0/autoapi/: summary.html
1.3.0/autoapi/server/: index.html
1.3.0/search/: search_index.js  search_index.json
client/: pyproject.toml
client/ayon_sitesync/: README.md  __init__.py  addon.py  sitesync.py  sync_server.py  sync_server_module.py  utils.py  version.py
client/ayon_sitesync/providers/: abstract_provider.py  (+8 more)
client/openpype_sitesync/: pyproject.toml  sync_server.py  sync_server_module.py
endpoints/: __init__.py  endpoints.py  models.py
frontend/: .env  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx
scripts/: set_user.py
server/: __init__.py
server/settings/: models.py  settings.py
settings/: settings.py
settings/providers/: dropbox.py  gdrive.py  local_drive.py  sftp.py
test-build/: 404.html  index.html  license.html  objects.inv
test-build/autoapi/: summary.html
test-build/search/: search_index.js  search_index.json
(+116 files in other folders)
