[tool.poetry]
name = "SiteSync"
version = "1.2.2+dev"
description = "SiteSync Addon"
authors = ["Ynput s.r.o. <info@ynput.io>"]
license = "MIT License"
homepage = "https://ayon.ynput.io/"
documentation = "https://ayon.ynput.io/docs/addon_site_sync_admin"
repository = "https://github.com/ynput/ayon-sitesync"
readme = "README.md"
